Added some healsluts stuff

--- a/v1.0.3.html
+++ b/v1.0.3.html
@@ -649,6 +649,12 @@
 * Diapers
 * Cum play
 
+#Healslutting
+(As Dom, As Sub)
+* Tank
+* DPS
+* Healer
+
 #Degradation
 (Giving, Receiving)
 * Glory hole
